* The tooltip for the signal plotter now indicates if the sensor had an error * Fix a stupid bug in the ordering of the tootips * When some sensors are missing, still update the whole window

BUG: 49913

svn path=/trunk/KDE/kdebase/workspace/; revision=610277